tests/errors/test_division_by_zero.mob
// Test division by zero error
print("Testing division by zero...");
var result = 10 / 0;
print("This should not print");
